--- a/CaliforniaHousePrice.ipynb
+++ b/CaliforniaHousePrice.ipynb
@@ -1121,14 +1121,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "544c0a1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "id": "9ea5eb07-fd3e-4927-966e-8c09f1874e02",
    "metadata": {},
@@ -4241,7 +4233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4255,7 +4247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
